Bug 361728 - Files with filter layers or fill layers assert in an instant preview related part.
Summary: Files with filter layers or fill layers assert in an instant preview related ...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Instant Preview (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR critical
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-13 17:18 UTC by wolthera
Modified: 2016-04-15 17:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2016-04-13 17:18:35 UTC
I will attach two files that both assert with this line, invisibly crashing krita on windows, but fully reproducable on Ubuntu 15.10:

ASSERT (krita): "extraWeight == 1" in file /home/krita/kde/src/krita/libs/image/kis_paint_device.cc, line 591



Reproducible: Always
Comment 2 Sam Keeper 2016-04-13 17:41:55 UTC
Confirmed on my system. All files with either color fill or filter layers cause the program to crash.

I'm running Windows 8.1 on an ASUS laptop using an Intel GPU.
Comment 3 Dmitry Kazakov 2016-04-15 17:31:01 UTC
Git commit 0bbe01be4395e41b88401d0c6552284cbc387b1d by Dmitry Kazakov.
Committed on 15/04/2016 at 17:30.
Pushed by dkazakov into branch 'master'.

Fix initialization of the default bounds object for filter and fill layers

Fixes T2247

M  +1    -1    libs/image/kis_selection_based_layer.cpp

http://commits.kde.org/krita/0bbe01be4395e41b88401d0c6552284cbc387b1d