Fix initialization of the default bounds object for filter and fill layers

Fixes T2247
BUG:361728