libs/image/kis_selection_based_layer.cpp
@@ -182,7 +182,7 @@ void KisSelectionBasedLayer::resetCache(const KoColorSpace *colorSpace)
     if (!m_d->paintDevice ||
             !(*m_d->paintDevice->colorSpace() == *colorSpace)) {
 
-        m_d->paintDevice = new KisPaintDevice(colorSpace);
+        m_d->paintDevice = new KisPaintDevice(this, colorSpace, new KisDefaultBounds(image()));
     } else {
         m_d->paintDevice->clear();
     }
